# dynisland-modules

./: .gitignore  README.md
.github/workflows/: release.yml
clock-module/: Cargo.toml  README.md  default.scss
clock-module/resources/: compact.ui  resources.gresource.xml
clock-module/src/: config.rs  lib.rs  module.rs
clock-module/src/widget/: clock.rs  compact.rs  mod.rs
dynamic-layout/: Cargo.toml  README.md
dynamic-layout/src/: config.rs  layout.rs  lib.rs  window_position.rs
dynamic-layout/src/priority_order/: cycle_order.rs  mod.rs  ui_update.rs
example-module/: Cargo.toml  README.md  build.rs  default.scss
example-module/resources/: compact.ui  expanded.ui  minimal.ui  overlay.ui  resources.gresource.xml
example-module/src/: config.rs  lib.rs  module.rs  widget.rs
example-module/src/widget/: compact.rs  expanded.rs  minimal.rs  mod.rs  overlay.rs
music-module/: Cargo.toml  README.md  cava-config  default.scss
music-module/resources/: compact.ui  expanded.ui  minimal.ui  resources.gresource.xml  visualizer.ui
music-module/src/: config.rs  lib.rs  module.rs  player_info.rs  producer_tasks.rs  utils.rs
music-module/src/widget/: compact.rs  expanded.rs  minimal.rs  mod.rs  visualizer.rs
script-module/: Cargo.toml  README.md  default.scss
script-module/resources/: compact.ui  minimal.ui  resources.gresource.xml
script-module/src/: config.rs  lib.rs  module.rs  utils.rs
script-module/src/widget/: compact.rs  minimal.rs  mod.rs
systray-module/: Cargo.toml  README.md  build.rs  default.scss
systray-module/resources/: compact.ui  expanded.ui  menu-item.ui  menu-page.ui  minimal.ui  resources.gresource.xml
systray-module/src/: config.rs  item_menu_tasks.rs  item_tasks.rs  lib.rs  module.rs
systray-module/src/status_notifier/: host.rs  icon.rs  item.rs  layout.rs  menu.rs  mod.rs  watcher.rs
systray-module/src/status_notifier/proxy/: dbus_menu.rs  dbus_menu.xml  dbus_status_notifier_item.rs  dbus_status_notifier_item.xml  dbus_status_notifier_watcher.rs  dbus_status_notifier_watcher.xml  mod.rs
systray-module/src/widget/: compact.rs  expanded.rs  minimal.rs  mod.rs
systray-module/src/widget/status_notifier_widgets/: menu_item.rs  menu_page.rs  mod.rs
