[package]
name = "dynamic-layout"
version = "0.1.0"
edition = "2021"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynisland-core = { path="../../core" }

tokio = { version = "1.39.0", features = ["rt", "time", "sync", "macros"] }
anyhow = "1.0.86"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["serde_derive"] }
env_logger = "0.11.2"
abi_stable = "0.11.3"
[lib]
name = "dynamic_layoutmanager"
crate-type = ["cdylib"]
