[package]
name = "dynisland_dynamic_layoutmanager"
version = "0.1.1"
authors = ["cr3eperall"]
description = "Dynamic LayoutManager for dynisland"
repository = "https://github.com/cr3eperall/dynisland-modules"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynisland-core = { workspace=true, version="0.1.2" }

tokio = { version = "1.39.0", features = ["rt", "time", "sync", "macros"] }
anyhow = "1.0.86"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.127"
env_logger = "0.11.2"
abi_stable = "0.11.3"

[features]
embedded = []

[lib]
name = "dynamic_layoutmanager"
crate-type = ["cdylib", "rlib"]
