[package]
name = "music-module"
version = "0.1.0"
edition = "2021"
license = "mit"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynisland-core = { git="https://github.com/cr3eperall/dynisland" }
dynisland-abi = { git="https://github.com/cr3eperall/dynisland" }
anyhow = { workspace = true }
gtk = { workspace = true, features = ["unsafe-assume-initialized"] }
gdk = { workspace = true }
glib = { workspace = true }
glib-macros = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "time",
    "sync",
    "macros",
    "process",
] }
serde = { workspace = true, features = ["serde_derive"] }
env_logger = { workspace = true }
log = { workspace = true }
ron = { workspace = true }
abi_stable = { workspace = true }
grass = { workspace = true }


mpris = "2.0.1"
reqwest = { version = "0.12.7"}
serde_json = "1.0.113"

[build-dependencies]
glib-build-tools = {workspace = true}

[lib]
name = "music_module"

crate-type = ["cdylib"]
