[package]
name = "dynisland_music_module"
version = "0.1.3"
authors = ["cr3eperall"]
description = "Music module for dynisland"
repository = "https://github.com/cr3eperall/dynisland-modules"
edition = "2021"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynisland-core = { workspace=true, version="=0.1.3", features = ["macro"] }

tokio = { version = "1.39.0", features = [
    "rt",
    "time",
    "sync",
    "macros",
    "process",
] }
anyhow = "1.0.86"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["serde_derive"] }
env_logger = "0.11.2"
abi_stable = "0.11.3"
grass = {version = "0.13.4", default-features = false, features = ["macro"]}


mpris = "2.0.1"
reqwest = { version = "0.12.7"}
serde_json = "1.0.127"

[build-dependencies]
glib-build-tools = { version="0.19.0" }

[features]
embedded = []

[lib]
name = "music_module"

crate-type = ["cdylib", "rlib"]
